# TyrSecureV2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  makefile
app/: CMakeLists.txt  main.cpp
app/daemon/: CMakeLists.txt  main.cpp
app/dummy/: CMakeLists.txt  main.cpp
app/epoll_test/: CMakeLists.txt  main.cpp
app/launcher/: CMakeLists.txt  main.cpp
app/socket/: CMakeLists.txt  main.cpp
bpfprog/: bpf.c  bprm_check_security.c  mmap_file_and_file_mprotect.c  ptrace_access_check.c  task_kill.c  vmlinux.h
cmake/: BPF.cmake  Build.cmake  CPMConfig.cmake  Compiler.cmake  Environment.cmake  Packages.cmake  Tests.cmake
docs/: Doxyfile
docs/html/: CGService_8hpp_source.html  CGroup_8hpp_source.html  FD_8hpp_source.html  GLauncher_8hpp_source.html  IdentityProvider_8hpp_source.html  LContext_8hpp_source.html  StringUtil_8hpp_source.html  annotated.html  annotated_dup.js  classLauncher_1_1GLauncher-members.html  classLauncher_1_1GLauncher.html  classLauncher_1_1GLauncher.js  classes.html  classsys_1_1CGService-members.html  classsys_1_1CGService.html  classsys_1_1CGroup-members.html  classsys_1_1CGroup.html  classsys_1_1FD-members.html  classsys_1_1FD.html  classsys_1_1IdentityProvider-members.html  classsys_1_1IdentityProvider.html  dir_04904366b0f5ad5c2dd7cb6a95f54901.html  dir_062dd3d6849305887aa6c2f56ce95494.html  dir_062dd3d6849305887aa6c2f56ce95494.js  dir_0b81d7434f66459e3169837ff69ac3b6.html  dir_0b81d7434f66459e3169837ff69ac3b6.js  dir_0c7f63c7dc6f66f35d0244f3e2354931.html  dir_0f4107ffdb13ce8db4f9bed219a312de.html  dir_10c5d0b24f1de3b32dd66bf1aaba0ca6.html  dir_2d094300ae4f2c55dd459b9ec7dd0ad3.html  dir_2d094300ae4f2c55dd459b9ec7dd0ad3.js  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_53179951b0ce778de019171d58280c68.html  dir_535943891f13ea3e137828d8641740ed.html  dir_5f165f927a02b3a4f06eb05abfb55230.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_65e5654e51f9e3188f8d7e8a26b3356b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+22829 more)
docs/latex/: CGService_8hpp_source.tex  CGroup_8hpp_source.tex  FD_8hpp_source.tex  GLauncher_8hpp_source.tex  IdentityProvider_8hpp_source.tex  LContext_8hpp_source.tex  StringUtil_8hpp_source.tex  annotated.tex  classLauncher_1_1GLauncher.tex  classsys_1_1CGService.tex  classsys_1_1CGroup.tex  classsys_1_1FD.tex  classsys_1_1IdentityProvider.tex  files.tex  index.tex  refman.tex  structBIT__CStream__t.tex  structBIT__DStream__t.tex  structBlockSummary.tex  structDTableDesc.tex  structEstimatedBlockSize.tex  structFPStats.tex  structFSE__CState__t.tex  structFSE__DState__t.tex  structFSE__DTableHeader.tex  structFSE__DecompressWksp.tex  structFSE__decode__t.tex  structFSE__symbolCompressionTransform.tex  structFingerprint.tex  structHUF__CStream__t.tex  structHUF__CTableHeader.tex  structHUF__CompressWeightsWksp.tex  structHUF__DEltX1.tex  structHUF__DEltX2.tex  structHUF__DecompressFastArgs.tex  structHUF__ReadDTableX1__Workspace.tex  structHUF__ReadDTableX2__Workspace.tex  structHUF__WriteCTableWksp.tex  structHUF__buildCTable__wksp__tables.tex  structHUF__compress__tables__t.tex  (+11653 more)
ebpf/: CMakeLists.txt
ebpf/hooks/: CMakeLists.txt  daemon_hardener.bpf.c  game_protection.bpf.c  master.bpf.c  print_test.bpf.c
ebpf/include/: ebpf_types.h  vmlinux.h
ebpf/skeletons/: master.skel.h  print_test.skel.h
include/common/: GameID.hpp  LauncherStatus.hpp  Protocol.hpp  Result.hpp  local_protocol.hpp
include/daemon/: LContext.hpp  LauncherStatus.hpp
include/system/: CGroup.hpp  EPoll.hpp  FD.hpp
include/utils/: FDUtil.hpp  StringUtil.hpp
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  OdinEngine.cpp  OdinEngine.hpp
src/daemon/control/: CMakeLists.txt  CommandListener.cpp
src/daemon/control/include/: CommandListener.hpp
src/daemon/events/: ExitEvent.cpp  LaunchEvent.cpp
src/daemon/events/include/: ExitEvent.hpp  LaunchEvent.hpp
src/daemon/execution/: CMakeLists.txt  Runner.cpp
src/daemon/execution/include/: Context.hpp  GameWhitelist.hpp  Runner.hpp
src/daemon/gateway/: CMakeLists.txt  CommandListener.cpp
src/daemon/gateway/include/: CommandListener.hpp
src/daemon/launcher/: CGManager.cpp  CMakeLists.txt  GLauncher.cpp  GameWhitelist.cpp  LaunchRequestReceiver.cpp  Runner.cpp  SessionManager.cpp
src/daemon/launcher/include/: CGManager.hpp  Context.hpp  GLauncher.hpp  GameWhitelist.hpp  LaunchRequestReceiver.hpp  Runner.hpp  SessionManager.hpp
src/daemon/monitor/: CMakeLists.txt
src/daemon/monitor/ebpf/: CMakeLists.txt  EbpfManager.cpp
src/daemon/monitor/ebpf/hooks/: CMakeLists.txt  master.bpf.c  print_test.bpf.c
src/daemon/monitor/ebpf/include/: Ebpf.h  EbpfManager.hpp  IEbpfModule.hpp
src/daemon/monitor/ebpf/modules/: SyscallModule.cpp  SyscallModule.hpp
src/daemon/monitor/ebpf_manager/: CMakeLists.txt  EbpfManager.cpp  EbpfRingbufferListener.cpp
src/daemon/monitor/ebpf_manager/include/: EbpfManager.hpp  EbpfRingBufListener.hpp  IEbpfModule.hpp
src/daemon/monitor/ebpf_manager/modules/: CMakeLists.txt  DaemonModule.cpp  GameModule.cpp  SyscallModule.cpp
src/daemon/monitor/ebpf_manager/modules/include/: DaemonModule.hpp  GameModule.hpp  SyscallModule.hpp
src/daemon/monitor/kernel_validator/: EnvironmentValidator.cpp
src/daemon/session/: StartupHandler.cpp
src/kernel_validator/: CMakeLists.txt  EnvironmentValidator.cpp
src/kernel_validator/include/: EnvironmentValidator.hpp
src/kernel_validator/probes/: UnsignedKernelModuleProbe.cpp
src/security_monitor/: CMakeLists.txt  EnvironmentValidator.cpp
src/security_monitor/include/: EnvironmentValidator.hpp
src/security_monitor/probes/: UnsignedKernelModuleProbe.cpp
src/system/: CGService.cpp  CGroupService.cpp  CMakeLists.txt  EPollBinding.cpp  EPollManager.cpp  FDService.cpp  IdentityProvider.cpp  IdentityService.cpp
src/system/include/: CGService.hpp  CGroupService.hpp  EPollBinding.hpp  EPollManager.hpp  FDService.hpp  IEPollListener.hpp  IdentityProvider.hpp  IdentityService.hpp
tests/daemon/: CMakeLists.txt  (+2 more)
(+31 files in other folders)
